# crypto-tweets

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
src/crypto_tweets/: __init__.py  buy-crypto-if-elon-mentions-crypto.py
