[tool.poetry]
name = "crypto-tweets"
version = "0.1.0"
description = ""
authors = ["engeir <eirroleng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^1.46.35"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.11.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
